-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.0.0-rc1
-
Windows 7 64 bit
-
b55edaefb321caaf9e64b346bedb5419d679ee2f 0e66cf578e46938bff6d3ac9666f86e521fb951c
- Let Creator stop at a breakpoint in a program.
- Switch to instruction-wise operation mode.
You'll see the Disassembler. A red circle is shown to indicate the breakpoint in the current line. - Right-click on a line number and select "Set Breakpoint" from the context menu.
Nothing seems to happen. - Right-click on a line number and select "Toggle Bookmark" from the context menu.
Now new icon is being displayed. In Bookmarks view, an empty entry with the clicked line number appears. - Click on this entry.
It disappears.
Setting bookmarks and breakpoints in Disassembler should work like in every other editor. If this is not possible for some reason, the context menu should not offer it.
For Gerrit Dashboard: QTCREATORBUG-10410 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
68528,1 | Debugger: Fix setting of breakpoints in disassembler view | 3.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
68531,1 | Bookmarks: Disable context menu for disassembler view | 3.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |