Debugger: Fix setting of breakpoints in disassembler view

Task-number: QTCREATORBUG-10410
Change-Id: I76f6b430c277b6b7750c1c0b0de71e689dfea7de
Reviewed-by: hjk <hjk121@nokiamail.com>